--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,8 @@ body {
 }
 
 .card {
+  min-height: 200px;
+  min-width: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
